@@ -1,4 +1,6 @@
 version 1.0-rc - XX-Apr-2011
+. [NEW] Templates: Added Xcode4 templates
+. [NEW] Tempaltes: Possibility to run the installer from any directory
 . [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
 . [3RD] FontLabel: Fixes issues with wrapping and apostraphes and hyphens (issue #1124)
 
